# freenet-delta

./: AGENTS.md  Cargo.toml  Makefile.toml
common/: Cargo.toml
common/src/: state.rs
delegates/site-delegate/src/: lib.rs
ui/: Cargo.toml  Dioxus.toml  package-lock.json  package.json
ui/assets/: main.css  styles.css  tailwind.css
ui/public/contracts/: site_contract.wasm  site_delegate.wasm
ui/src/: components.rs  example_data.rs  freenet_api.rs  main.rs  state.rs
ui/src/components/: add_site_dialog.rs  editor.rs  export_key.rs  page_view.rs  pages_sidebar.rs  sidebar.rs  sites_sidebar.rs
ui/src/freenet_api/: connection.rs  delegate.rs  operations.rs
