[workspace]
members = [
    "common",
    "contracts/site-contract",
    "delegates/site-delegate",
    "ui",
]
resolver = "2"

[workspace.dependencies]
# Serialization
ciborium = "0.2.2"
serde = { version = "1.0", features = ["derive"] }

# Cryptography
ed25519-dalek = { version = "2.1.1", default-features = false, features = ["alloc", "serde"] }
blake3 = { version = "1.5.3", features = ["serde"] }
bs58 = "0.5.1"

# Utilities
rand = { version = "0.8.5", features = ["getrandom"], default-features = true }
getrandom = { version = "0.2.16", features = ["js"] }
chrono = { version = "0.4", features = ["serde"] }

# Freenet
freenet-scaffold = "0.2.2"
freenet-scaffold-macro = "0.2.2"
freenet-stdlib = { version = "0.3.5", features = ["contract"] }

# Internal
delta-core = { path = "common", package = "delta-core" }

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[profile.release.package."*"]
opt-level = 'z'
