[package]
name = "delta-ui"
version.workspace = true
edition.workspace = true

[features]
default = []
example-data = []
no-sync = []

[dependencies]
serde.workspace = true
ed25519-dalek = { workspace = true, features = ["rand_core"] }
rand.workspace = true
getrandom = { version = "0.2.15", features = ["js", "wasm-bindgen", "js-sys"], default-features = false }

# UI Framework
dioxus = { version = "0.7.3", features = ["web"] }

# Web
web-sys = { version = "0.3.64", features = [
    "Document",
    "Element",
    "HtmlElement",
    "HtmlTextAreaElement",
    "Window",
    "Storage",
] }
wasm-bindgen = "0.2.104"

# Utilities
chrono.workspace = true
ciborium.workspace = true
markdown = "1.0.0-alpha.21"

# Internal
delta-core.workspace = true
