[package]
name = "delta-ui"
version.workspace = true
edition.workspace = true

[features]
default = []
example-data = []
no-sync = []

[dependencies]
serde.workspace = true
ed25519-dalek = { workspace = true, features = ["rand_core"] }
rand.workspace = true
getrandom = { version = "0.2.15", features = ["js", "wasm-bindgen", "js-sys"], default-features = false }

# UI Framework
dioxus = { version = "0.7.3", features = ["web"] }

# Web
web-sys = { version = "0.3.64", features = [
    "Document",
    "Element",
    "HtmlElement",
    "HtmlTextAreaElement",
    "Window",
    "Storage",
] }
wasm-bindgen = "0.2.104"
js-sys = "0.3.64"
wasm-bindgen-futures = "0.4.43"
bs58 = "0.5.1"

# Utilities
chrono.workspace = true
ciborium.workspace = true
markdown = "1.0.0-alpha.21"
serde_json = "1.0"
hex = "0.4"

# Freenet
freenet-stdlib = { workspace = true, features = ["net"] }

# Internal
delta-core.workspace = true

[build-dependencies]
chrono = "0.4"
